; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/camera/extr_s5k3e2fx.c_s5k3e2fx_video_config.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/camera/extr_s5k3e2fx.c_s5k3e2fx_video_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32, i32 }

@S_UPDATE_PERIODIC = common dso_local global i32 0, align 4
@S_RES_PREVIEW = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"s5k3e2fx sensor configuration done!\0A\00", align 1
@S_RES_CAPTURE = common dso_local global i32 0, align 4
@s5k3e2fx_ctrl = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @s5k3e2fx_video_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @s5k3e2fx_video_config(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  switch i32 %7, label %27 [
    i32 128, label %8
    i32 129, label %18
  ]

8:                                                ; preds = %2
  %9 = load i32, i32* @S_UPDATE_PERIODIC, align 4
  %10 = load i32, i32* @S_RES_PREVIEW, align 4
  %11 = call i32 @s5k3e2fx_setting(i32 %9, i32 %10)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %8
  %15 = load i32, i32* %6, align 4
  store i32 %15, i32* %3, align 4
  br label %46

16:                                               ; preds = %8
  %17 = call i32 @CDBG(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  br label %28

18:                                               ; preds = %2
  %19 = load i32, i32* @S_UPDATE_PERIODIC, align 4
  %20 = load i32, i32* @S_RES_CAPTURE, align 4
  %21 = call i32 @s5k3e2fx_setting(i32 %19, i32 %20)
  store i32 %21, i32* %6, align 4
  %22 = load i32, i32* %6, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %18
  %25 = load i32, i32* %6, align 4
  store i32 %25, i32* %3, align 4
  br label %46

26:                                               ; preds = %18
  br label %28

27:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %46

28:                                               ; preds = %26, %16
  %29 = load i32, i32* %5, align 4
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** @s5k3e2fx_ctrl, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  store i32 %29, i32* %31, align 4
  %32 = load i32, i32* %5, align 4
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** @s5k3e2fx_ctrl, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 1
  store i32 %32, i32* %34, align 4
  %35 = load i32, i32* %4, align 4
  %36 = load %struct.TYPE_2__*, %struct.TYPE_2__** @s5k3e2fx_ctrl, align 8
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 2
  store i32 %35, i32* %37, align 4
  %38 = load %struct.TYPE_2__*, %struct.TYPE_2__** @s5k3e2fx_ctrl, align 8
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 4
  %40 = load i32, i32* %39, align 4
  %41 = load %struct.TYPE_2__*, %struct.TYPE_2__** @s5k3e2fx_ctrl, align 8
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 3
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @s5k3e2fx_write_exp_gain(i32 %40, i32 %43)
  store i32 %44, i32* %6, align 4
  %45 = load i32, i32* %6, align 4
  store i32 %45, i32* %3, align 4
  br label %46

46:                                               ; preds = %28, %27, %24, %14
  %47 = load i32, i32* %3, align 4
  ret i32 %47
}

declare dso_local i32 @s5k3e2fx_setting(i32, i32) #1

declare dso_local i32 @CDBG(i8*) #1

declare dso_local i32 @s5k3e2fx_write_exp_gain(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
